Test on fiberscope data started

--- a/BEARMiND_full_pipeline .ipynb
+++ b/BEARMiND_full_pipeline .ipynb
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\admin\\\\.ipython\\\\profile_default\\\\startup\\\\startup.py'"
+       "'/home/vladimir/.ipython/profile_default/startup/startup.py'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,8 +55,8 @@
    "outputs": [],
    "source": [
     "config_data = {\n",
-    "    'ROOT': \"D:\\\\Projects\\\\BOF\\\\Estimates\",\n",
-    "    'DATA_PATHWAY': 'legacy'\n",
+    "    'ROOT': '/home/vladimir/RawCalciumData/',\n",
+    "    'DATA_PATHWAY': 'bonsai'\n",
     "}\n",
     "\n",
     "update_config(config_data)"
@@ -72,10 +72,10 @@
     {
      "data": {
       "text/plain": [
-       "{'ROOT': 'D:\\\\Projects\\\\estimates\\\\Trace',\n",
-       " 'DATA_PATHWAY': 'legacy',\n",
-       " 'CPUs': 28,\n",
-       " 'RAM': 64}"
+       "{'ROOT': '/home/vladimir/RawCalciumData',\n",
+       " 'DATA_PATHWAY': 'bonsai',\n",
+       " 'CPUs': 8,\n",
+       " 'RAM': 8}"
       ]
      },
      "execution_count": 2,
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,11 +293,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "session_name = 'Trace_H10_2D'\n",
+    "session_name = 'Test'\n",
     "opt_gsig=4\n",
     "min_corr = 0.9\n",
     "min_pnr = 8\n",
@@ -332,9 +332,9 @@
     "            'rval_thr': 0.95,                      # threshold on space consistency           \n",
     "            'use_cnn': False}                      # whether to use CNNs for event detection  \n",
     "\n",
-    "session_config_path = get_session_config_path(session_name)\n",
-    "cnmf_to_config = {'cnmf_params': cnmf_dict}\n",
-    "update_config(cnmf_to_config, cpath=session_config_path)"
+    "#session_config_path = get_session_config_path(session_name)\n",
+    "#cnmf_to_config = {'cnmf_params': cnmf_dict}\n",
+    "#update_config(cnmf_to_config, cpath=session_config_path)"
    ]
   },
   {
@@ -349,7 +349,37 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|                                                                                   | 0/1 [00:00<?, ?it/s]In setting CNMFParams, non-pathed parameters were used; this is deprecated. In some future version of Caiman, allow_legacy will default to False (and eventually will be removed)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "/home/vladimir/RawCal_gsig4_mincorr0.9_minpnr8_estimates.pickle\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The local backend is an alias for the multiprocessing backend, and the alias may be removed in some future version of Caiman\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading tif to memory...\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "#fnames = glob(os.path.join(CONFIG['ROOT'], '*_MC.tif'))\n",
@@ -357,10 +387,10 @@
     "fnames = askopenfilenames(title = 'Select files for batch cnmf', initialdir = CONFIG['ROOT'], filetypes = [('TIFF files', '.tif')])\n",
     "\n",
     "for name in tqdm.tqdm(fnames):\n",
-    "    fps = get_fps_from_timestamps(name[:-4-6], default_fps=20, verbose=False)\n",
-    "    session_config_path = get_session_config_path(name[-12-30:-4-6-20])\n",
-    "    cnmf_config = read_config(name=session_config_path)\n",
-    "    cnmf_dict = cnmf_config['cnmf_params']\n",
+    "    fps = get_fps_from_timestamps(name[:-4-6], default_fps=100, verbose=False)\n",
+    "    #session_config_path = get_session_config_path(name[-12-30:-4-6-20])\n",
+    "    #cnmf_config = read_config(name=session_config_path)\n",
+    "    #cnmf_dict = cnmf_config['cnmf_params']\n",
     "    cnmf_dict.update({'fr': fps})\n",
     "    cnmf_dict.update({'tsub': 2})\n",
     "    cnmf_dict.update({'ssub': 1})\n",
@@ -1161,7 +1191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.9"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
