--- a/BEARMiND_full_pipeline .ipynb
+++ b/BEARMiND_full_pipeline .ipynb
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/home/vladimir/.ipython/profile_default/startup/startup.py'"
+       "'/users/ctx/sotskov/.ipython/profile_default/startup/startup.py'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,6 +33,15 @@
     "local_startup_dir = get_ipython().profile_dir.startup_dir\n",
     "filedir = os.getcwd()\n",
     "shutil.copy(os.path.join(filedir, 'startup.py'), os.path.join(local_startup_dir, 'startup.py'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run startup.py"
    ]
   },
   {
@@ -48,14 +57,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
+    "import tempfile\n",
+    "tempfile.tempdir = '/export/home1/tmp'\n",
+    "\n",
     "config_data = {\n",
-    "    'ROOT': '/home/vladimir/RawCalciumData/',\n",
+    "    #'ROOT': '/home/vladimir/RawCalciumData/',\n",
+    "    'ROOT': '/export/home1/RawCalciumData/',\n",
     "    'DATA_PATHWAY': 'bonsai'\n",
     "}\n",
     "\n",
@@ -64,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -72,13 +85,13 @@
     {
      "data": {
       "text/plain": [
-       "{'ROOT': '/home/vladimir/RawCalciumData',\n",
+       "{'ROOT': '/export/home1/RawCalciumData',\n",
        " 'DATA_PATHWAY': 'bonsai',\n",
-       " 'CPUs': 8,\n",
-       " 'RAM': 8}"
+       " 'CPUs': 20,\n",
+       " 'RAM': 63}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,14 +360,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|                                                                                   | 0/1 [00:00<?, ?it/s]In setting CNMFParams, non-pathed parameters were used; this is deprecated. In some future version of Caiman, allow_legacy will default to False (and eventually will be removed)\n"
+      "  0%|                                                                                                                            | 0/1 [00:00<?, ?it/s]In setting CNMFParams, non-pathed parameters were used; this is deprecated. In some future version of Caiman, allow_legacy will default to False (and eventually will be removed)\n"
      ]
     },
     {
@@ -362,7 +375,7 @@
      "output_type": "stream",
      "text": [
       "[]\n",
-      "/home/vladimir/RawCal_gsig4_mincorr0.9_minpnr8_estimates.pickle\n"
+      "/export/home1/RawCalciumData/downsampled_movie_gsig4_mincorr0.9_minpnr8_estimates.pickle\n"
      ]
     },
     {
@@ -377,6 +390,29 @@
      "output_type": "stream",
      "text": [
       "loading tif to memory...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:06<00:00,  6.87s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Problem with /export/home1/RawCalciumData/downsampled_movie_gsig4_mincorr0.9_minpnr8_estimates.pickle, computation aborted:\n",
+      "OSError('Not enough free space to write 5929827392 bytes')\n",
+      "CleanMemmaps attempts: 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -398,7 +434,7 @@
     "    a = cnmf_dict['gSig'][0]\n",
     "    aa = cnmf_dict['min_corr']\n",
     "    aaa = cnmf_dict['min_pnr']\n",
-    "    out_name = name[:-4-6-20] + f'_gsig{a}_mincorr{aa}_minpnr{aaa}_estimates.pickle'\n",
+    "    out_name = name[:-4] + f'_gsig{a}_mincorr{aa}_minpnr{aaa}_estimates.pickle'\n",
     "    print(out_name)\n",
     "    DoCNMF(name,\n",
     "           cnmf_dict,\n",
@@ -417,7 +453,27 @@
     "        except PermissionError:\n",
     "            time.sleep(1)\n",
     "            err_cnt += 1\n",
-    "    print('CleanMemmaps attemps:', err_cnt)"
+    "    print('CleanMemmaps attempts:', err_cnt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/export/home1/tmp'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "!export $CAIMAN_DATA="
    ]
   },
   {
