--- a/BEARMiND_full_pipeline .ipynb
+++ b/BEARMiND_full_pipeline .ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -91,7 +91,7 @@
        " 'RAM': 63}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,12 +306,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "session_name = 'Test'\n",
-    "opt_gsig=4\n",
+    "opt_gsig = 3\n",
     "min_corr = 0.9\n",
     "min_pnr = 8\n",
     "gSiz = opt_gsig*4+1\n",
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
      "output_type": "stream",
      "text": [
       "[]\n",
-      "/export/home1/RawCalciumData/downsampled_movie_gsig4_mincorr0.9_minpnr8_estimates.pickle\n"
+      "/export/home1/RawCalciumData/downsampled_movie_gsig3_mincorr0.9_minpnr8_estimates.pickle\n"
      ]
     },
     {
@@ -389,22 +389,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading tif to memory...\n"
+      "loading tif to memory...\n",
+      "cm.save_memmap ended...\n",
+      "cm.load_memmap ended...\n",
+      "Yr.T.reshape ended...\n",
+      "Performing CNMF...\n",
+      "source_extraction.cnmf\n",
+      "cnm.fit\n",
+      "cnm.estimates.evaluate_components\n",
+      "Computing imax...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:06<00:00,  6.87s/it]"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [03:58<00:00, 238.89s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Problem with /export/home1/RawCalciumData/downsampled_movie_gsig4_mincorr0.9_minpnr8_estimates.pickle, computation aborted:\n",
-      "OSError('Not enough free space to write 5929827392 bytes')\n",
+      "Saving result...\n",
+      "downsampled_movie.tif cnmf-ed in 238.8s\n",
       "CleanMemmaps attempts: 0\n"
      ]
     },
@@ -457,26 +465,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/export/home1/tmp'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "!export $CAIMAN_DATA="
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "xnAjhqtm7Ol8"
@@ -506,7 +494,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:01<00:00,  1.07it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2/2 [00:00<00:00,  4.81it/s]\n"
      ]
     }
    ],
@@ -539,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +537,7 @@
     "        part_estimates = LoadEstimates(fname, default_fps=default_fps)\n",
     "        all_estimates.append(part_estimates)\n",
     "\n",
-    "    all_good_comps = [est.idx_componentsa\n",
+    "    all_good_comps = [est.idx_components]\n",
     "    chunks = np.array_split(estimates0.idx_components, nparts)\n",
     "    for i, chunk in tqdm.tqdm(enumerate(chunks), total=len(chunks)):\n",
     "        selected = chunk\n",
@@ -568,16 +556,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"BOKEH_ALLOW_WS_ORIGIN\"] = 'http://localhost:8890/'"
+    "os.environ[\"BOKEH_ALLOW_WS_ORIGIN\"] = 'localhost:8888'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {
     "tags": []
    },
@@ -586,11 +574,11 @@
      "data": {
       "application/vnd.bokehjs_exec.v0+json": "",
       "text/html": [
-       "<script id=\"p1003\">\n",
+       "<script id=\"ccd9854c-ab96-4b20-a3d3-54057d613d40\">\n",
        "  (function() {\n",
        "    const xhr = new XMLHttpRequest()\n",
        "    xhr.responseType = 'blob';\n",
-       "    xhr.open('GET', \"http://localhost:57516/autoload.js?bokeh-autoload-element=p1003&bokeh-absolute-url=http://localhost:57516&resources=none\", true);\n",
+       "    xhr.open('GET', \"http://localhost:46855/autoload.js?bokeh-autoload-element=ccd9854c-ab96-4b20-a3d3-54057d613d40&bokeh-absolute-url=http://localhost:46855&resources=none\", true);\n",
        "    xhr.onload = function (event) {\n",
        "      const script = document.createElement('script');\n",
        "      const src = URL.createObjectURL(event.target.response);\n",
@@ -604,7 +592,7 @@
      },
      "metadata": {
       "application/vnd.bokehjs_exec.v0+json": {
-       "server_id": "79ce05dd0d9f4ff782c2ed8416af822b"
+       "server_id": "03c74f41b25743e0ab008a0c16ff6812"
       }
      },
      "output_type": "display_data"
@@ -619,11 +607,11 @@
     "bkapp_kwargs = {\n",
     "    'start_frame': 0,          # start from this frame\n",
     "    'end_frame': 90000,          # end at this frame\n",
-    "    'downsampling': 5,           # take every 'x' frame\n",
+    "    'downsampling': 1,           # take every 'x' frame\n",
     "    'fill_alpha': 0.5,       # selected neuron transparency\n",
     "    'ns_alpha': 0.15,         # non-selected neuron transparency\n",
     "    'line_width': 0.5,         # border width\n",
-    "    'cthr': 0.35,             # coutour_thr from caiman (% of signal inside a patch), affects patch size\n",
+    "    'cthr': 0.5,             # coutour_thr from caiman (% of signal inside a patch), affects patch size\n",
     "    'line_alpha': 0.5,           # border transparency\n",
     "    'trace_line_width': 0.5,       # trace line width\n",
     "    'trace_alpha': 1,          # trace transparency\n",
