Fiberscopic cnmfE params added from matlab script

--- a/BEARMiND_full_pipeline .ipynb
+++ b/BEARMiND_full_pipeline .ipynb
@@ -306,6 +306,164 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Fiberscopic CNMF params from Cathie's MATLAB script\n",
+    "'''\n",
+    "% ACTIONS TO MAKE  \n",
+    "actions = struct;\n",
+    "actions.CreateMask = false; % to extract mask corresponding to the bundle (from the image data), and then use it in CNMFE (apply it on Cn and PNR matrix to avoid problems close to the bundle limit). Mandatory for fiberscope data. \n",
+    "actions.PickNeuronsFromResidual = false; \n",
+    "actions.LoopsToRun = 1 ;  % number of optimization loops to run after initialisation. Can be 0. \n",
+    "with_manual_intervention = false;\n",
+    "actions.maskDownsampleData = false; \n",
+    "minImageFile = 'G:\\Souris154147\\22-06-21\\145003_sCMOS_154147-repos2\\6-DeepCAD_MvtCorr\\Misc\\minImage.tif'; % path to the image that will be used to make the mask\n",
+    "'''\n",
+    "\n",
+    "% COMPUTATION   \n",
+    "pars_envs = struct('memory_size_to_use', 120, ...   % GB, memory space you allow to use in MATLAB\n",
+    "    'memory_size_per_patch', 40, ...   % GB, space for loading data within one patch\n",
+    "    'patch_dims', [128, 128]);  %GB, patch size\n",
+    "\n",
+    "\n",
+    "\n",
+    "% SPATIAL     \n",
+    "gSiz = 17;          % pixel, neuron diameter\n",
+    "gSig_fact = 0.28; \n",
+    "gSig = gSig_fact * gSiz; % pixel, gaussian width of a gaussian kernel for filtering the data. 0 means no filtering\n",
+    "ssub = 1;           % spatial downsampling factor\n",
+    "min_pixel_fact = 2.25;\n",
+    "min_pixel = min_pixel_fact* gSig^2;      % minimum number of nonzero pixels for each neuron\n",
+    "with_dendrites = false;   % with dendrites or not\n",
+    "updateA_bSiz = 5;\n",
+    "spatial_constraints = struct('connected', true, 'circular', true);  % you can include following constraints: 'circular'\n",
+    "spatial_algorithm = 'hals_thresh';\n",
+    "\n",
+    "\n",
+    "% TEMPORAL\n",
+    "tsub = 1;           % temporal downsampling factor\n",
+    "deconv_flag = true;     % run deconvolution or not \n",
+    "deconv_method = 'bsd'; % method for running deconvolution {'foopsi', 'constrained', 'thresholded', 'bsd'}\n",
+    "tauRise = 0.005; #%0.07; %0.045; % en s\n",
+    "tauDecay = 0.1; %0.8;% !!! changer à 0.8 apres !!!  %s0.3; %0.142; % en s\n",
+    "Fs_fast = 100;             % acquisition frame rate (Hz) \n",
+    "N_downsample = 18; % downsample factor for first run of CNMFE \n",
+    "    % 6 fpr a 20min experiment\n",
+    "    % 10 for a 30min experiment\n",
+    "    % 12 for a 40min experiment\n",
+    "    % 18 for a 60min experiment    \n",
+    "    % 20 pour une manip totale sommeil veille sommeil; 10 pour une manip de 30min\n",
+    "    % testé N_downsample = 15 : out of memory pour CNMFE (downsample\n",
+    "    % stack OK, poids 6.5Go) \n",
+    "time_window = 30; % seconds, duration of time window for baseline subtraction\n",
+    "smin_slow = 0.5; \n",
+    "smin_fast = 0.5; \n",
+    "    % definition \n",
+    "    % 1 - pour les methodes habituelles de cnmfe ('foopsi', 'constrained',\n",
+    "    % 'thresholded') : smin defini par les developpeurs. \"When the value is\n",
+    "    % negative, the actual threshold is abs(smin)*noise level\"\n",
+    "    % 2 - pour bsd\n",
+    "    % si smin = 0 : aucun seuil n'est mis\n",
+    "    % si smin > 0 : un seuil egal ï¿œ smin * bruit est choisi\n",
+    "    % si smin < 0 : un seuil egal ï¿œ smin * Pphys.threshold est choisi\n",
+    "nk = 1;             % detrending the slow fluctuation. usually 1 is fine (no detrending)\n",
+    "% when changed, try some integers smaller than total_frame/(Fs*30)\n",
+    "detrend_method = 'spline';  % compute the local minimum as an estimation of trend.\n",
+    "\n",
+    "\n",
+    "%  BACKGROUND \n",
+    "bg_model = 'ring';  % model of the background {'ring', 'svd'(default), 'nmf'}\n",
+    "nb = 1;             % number of background sources for each patch (only be used in SVD and NMF model)\n",
+    "ring_radius_fact = 1.4;\n",
+    "ring_radius = ring_radius_fact * gSiz;  % when the ring model used, it is the radius of the ring used in the background model.\n",
+    "%otherwise, it's just the width of the overlapping area\n",
+    "num_neighbors = []; % number of neighbors for each neuron\n",
+    "bg_ssub = 2;        % downsample background for a faster speed \n",
+    "\n",
+    "\n",
+    "%   MERGING   \n",
+    "show_merge = false;  % if true, manually verify the merging step\n",
+    "merge_thr = 0.5;     % thresholds for merging neurons; [spatial overlap ratio, temporal correlation of calcium traces, spike correlation]\n",
+    "method_dist = 'max';   % method for computing neuron distances {'mean', 'max'}\n",
+    "dmin = 5;       % minimum distances between two neurons. it is used together with merge_thr\n",
+    "dmin_only = 2;  % merge neurons if their distances are smaller than dmin_only.\n",
+    "merge_thr_spatial = [0.6, 0.5, -inf];  % merge components with highly correlated spatial shapes (corr=0.8) and small temporal correlations (corr=0.1)\n",
+    "\n",
+    "\n",
+    "%  INITIALIZATION \n",
+    "K = 300;             % maximum number of neurons per patch. when K=[], take as many as possible.\n",
+    "%K = 10;\n",
+    "min_corr = 0.7;     % minimum local correlation for a seeding pixel\n",
+    "min_pnr = 36;       % minimum peak-to-noise ratio for a seeding pixel\n",
+    "bd = 0;             % number of rows/columns to be ignored in the boundary (mainly for motion corrected data)\n",
+    "frame_range = [];   % when [], uses all frames\n",
+    "save_initialization = false;    % save the initialization procedure as a video.\n",
+    "use_parallel = true;    % use parallel computation for parallel computing\n",
+    "show_init = true;   % show initialization results\n",
+    "center_psf = true;  % set the value as true when the background fluctuation is large (usually 1p data)\n",
+    "                    % set the value as false when the background fluctuation is small (2p)\n",
+    "\n",
+    "%  RESIDUAL  \n",
+    "min_corr_res = 0.5;\n",
+    "min_pnr_res = 5;\n",
+    "seed_method_res = 'auto';  % method for initializing neurons from the residual\n",
+    "update_sn = true;\n",
+    "\n",
+    "\n",
+    "%  FINAL RESULTS  \n",
+    "save_demixed = true;    % save the demixed file or not\n",
+    "kt = 1;                 % frame intervals\n",
+    "\n",
+    "#MASK FOV!!!\n",
+    "\n",
+    "\n",
+    "deconv_options = struct('type', 'ar2', ... % model of the calcium traces. {'ar1', 'ar2'}, not used in bsd\n",
+    "            'method', deconv_method, ... % method for running deconvolution {'foopsi', 'constrained', 'thresholded', 'bsd'}\n",
+    "            'Tar2', Tar2,... % tau_d et tau_r for AR2\n",
+    "            'smin', smin_slow, ...         % minimum spike size. When the value is negative, the actual threshold is abs(smin)*noise level, not used in bsd\n",
+    "            'optimize_pars', false, ...  % optimize AR coefficients\n",
+    "            'optimize_b', true, ...% optimize the baseline\n",
+    "            'max_tau', 20, ... % maximum decay time (unit: frame);\n",
+    "            'Obsd', Obsd, ... % parameter for bsd algo, see above\n",
+    "            'Pbsd', Pbsd, ... % parameter for bsd algo, see above\n",
+    "            'window_baseline', window_baseline_slow);  % size of time window to compute the baseline (default: 1000)\n",
+    " \n",
+    "neuron.updateParams('gSig', gSig, ...       % -------- spatial --------\n",
+    "            'gSiz', gSiz, ...\n",
+    "            'ring_radius', ring_radius, ...\n",
+    "            'ssub', ssub, ...\n",
+    "            'search_method', updateA_search_method, ...\n",
+    "            'bSiz', updateA_bSiz, ...\n",
+    "            'dist', updateA_dist, ...\n",
+    "            'spatial_constraints', spatial_constraints, ...\n",
+    "            'spatial_algorithm', spatial_algorithm, ...\n",
+    "            'tsub', tsub, ...                       % -------- temporal --------\n",
+    "            'deconv_flag', deconv_flag, ...\n",
+    "            'deconv_options', deconv_options, ...\n",
+    "            'nk', nk, ...\n",
+    "            'detrend_method', detrend_method, ...\n",
+    "            'background_model', bg_model, ...       % -------- background --------\n",
+    "            'nb', nb, ...\n",
+    "            'ring_radius', ring_radius, ...\n",
+    "            'num_neighbors', num_neighbors, ...\n",
+    "            'bg_ssub', bg_ssub, ...\n",
+    "            'merge_thr', merge_thr, ...             % -------- merging ---------\n",
+    "            'dmin', dmin, ...\n",
+    "            'method_dist', method_dist, ...\n",
+    "            'min_corr', min_corr, ...               % ----- initialization -----\n",
+    "            'min_pnr', min_pnr, ...\n",
+    "            'min_pixel', min_pixel, ...\n",
+    "            'bd', bd, ...\n",
+    "            'center_psf', center_psf);\n",
+    "neuron.Fs = Fs_slow;\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [],
@@ -1235,7 +1393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
