fiberscope testing continued, initial tiff merging required

--- a/BEARMiND_full_pipeline .ipynb
+++ b/BEARMiND_full_pipeline .ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -91,7 +91,7 @@
        " 'RAM': 63}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,9 +102,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcreate_mouse_configs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mroot\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mCONFIG\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mROOT\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m create_session_configs(root\u001b[38;5;241m=\u001b[39mCONFIG[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mROOT\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "File \u001b[0;32m/opt/bearmind-test/config.py:69\u001b[0m, in \u001b[0;36mcreate_mouse_configs\u001b[0;34m(root)\u001b[0m\n\u001b[1;32m     66\u001b[0m os\u001b[38;5;241m.\u001b[39mmakedirs(mouse_config_folder, exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m     68\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m sf \u001b[38;5;129;01min\u001b[39;00m session_folders:\n\u001b[0;32m---> 69\u001b[0m     ms_name \u001b[38;5;241m=\u001b[39m \u001b[43msf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msplit\u001b[49m\u001b[43m(\u001b[49m\u001b[43msep\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m_\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m     70\u001b[0m     mouse_config_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(base_path, mouse_config_folder, ms_name \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.json\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     71\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(mouse_config_path):\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "create_mouse_configs(root=CONFIG['ROOT'])\n",
     "create_session_configs(root=CONFIG['ROOT'])"
@@ -306,27 +319,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nmin_pixel_fact = 2.25;\\nmin_pixel = min_pixel_fact* gSig^2    #minimum number of nonzero pixels for each neuron\\n'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Fiberscopic CNMF params from Cathie's MATLAB script\n",
     "#NB!! Leave only those explicitly listed in the CNMF class    \n",
     "gSiz = 17   # pixel, neuron diameter\n",
     "gSig_fact = 0.28 \n",
     "gSig = gSig_fact * gSiz # pixel, gaussian width of a gaussian kernel for filtering the data. 0 means no filtering\n",
-    "ssub = 1 # spatial downsampling factor\n",
-    "tsub = 1 # temporal downsampling factor\n",
-    "deconv_flag = true    #run deconvolution or not \n",
     "nb = 1      #             % number of background sources for each patch (only be used in SVD and NMF model)\n",
     "ring_size_fact = 1.4 \n",
-    "ssub_B = 2              #downsample background for a faster speed \n",
-    "merge_thresh = 0.5\n",
+    "merge_thr = 0.5\n",
     "K = 300             # maximum number of neurons per patch. when K=[], take as many as possible.\n",
     "min_corr = 0.7      # minimum local correlation for a seeding pixel\n",
     "min_pnr = 36        # minimum peak-to-noise ratio for a seeding pixel\n",
     "\n",
-    "center_psf = true;  # set the value as true when the background fluctuation is large (usually 1p data)\n",
+    "\n",
     "\n",
     "#MASK FOV!!!\n",
     "\n",
@@ -340,29 +360,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "session_name = 'Test'\n",
-    "opt_gsig = 3\n",
+    "session_name = 'sleeppre'\n",
+    "#Classic miniscopic parameters\n",
+    "'''\n",
+    "gSig = 3\n",
     "min_corr = 0.9\n",
     "min_pnr = 8\n",
     "gSiz = opt_gsig*4+1\n",
-    "cnmf_dict= {'fr': 20,                   # frame rate, frames per second (NOW RECALCULATED FOR EACH FILE FROM TIMESTAMP DATA)\n",
+    "nb = 0      \n",
+    "ring_size_fact = 1.5 \n",
+    "merge_thr = 0.8\n",
+    "K = None\n",
+    "'''\n",
+    "cnmf_dict= {'fr': 100,                   # frame rate, frames per second (NOW RECALCULATED FOR EACH FILE FROM TIMESTAMP DATA)\n",
     "            'decay_time': 1,            # typical duration of calcium transient \n",
     "            'method_init': 'corr_pnr',  # use this for 1 photon\n",
-    "            'K': None,                  # upper bound on number of components per patch, in general None\n",
-    "            'gSig': (opt_gsig, opt_gsig),             # gaussian HALF-width of a 2D gaussian kernel (in pixels), which approximates a neuron\n",
-    "            'gSiz': (gSiz, gSiz),           # maximal radius of a neuron in pixels\n",
-    "            'merge_thr': 0.8,          # merging threshold, max correlation allowed\n",
+    "            'K': K,                     # upper bound on number of components per patch, in general None\n",
+    "            'gSig': (gSig, gSig),       # gaussian HALF-width of a 2D gaussian kernel (in pixels), which approximates a neuron\n",
+    "            'gSiz': (gSiz, gSiz),       # maximal radius of a neuron in pixels\n",
+    "            'merge_thr': merge_thr,     # merging threshold, max correlation allowed\n",
     "            'p': 1,                     # order of the autoregressive system\n",
     "            'tsub': 1,                  # downsampling factor in time for initialization\n",
     "            'ssub': 1,                  # downsampling factor in space for initialization\n",
     "            'rf': 40,                   # half-size of the patches in pixels. e.g., if rf=40, patches are 80x80\n",
     "            'stride': 25,               # amount of overlap between the patches in pixels(keep it at least large as gSiz, i.e 4 times the neuron size gSig) \n",
     "            'only_init': True,          # set it to True to run CNMF-E\n",
-    "            'nb': 0,                    # number of background components (rank) if positive, else exact ring model with following settings: nb= 0: Return background as b and W, gnb=-1: Return full rank background B, gnb<-1: Don't return background\n",
+    "            'nb': nb,                    # number of background components (rank) if positive, else exact ring model with following settings: nb= 0: Return background as b and W, gnb=-1: Return full rank background B, gnb<-1: Don't return background\n",
     "            'nb_patch': 0,              # number of background components (rank) per patch if nb>0, else it is set automatically\n",
     "            'method_deconvolution': 'oasis',       # could use 'cvxpy' alternatively\n",
     "            'low_rank_background': None,           # None leaves background of each patch intact, True performs global low-rank approximation if gnb>0\n",
@@ -372,7 +399,7 @@
     "            'normalize_init': False,               # just leave as is\n",
     "            'center_psf': True,                    # leave as is for 1 photon\n",
     "            'ssub_B': 2,                           # additional downsampling factor in space for background\n",
-    "            'ring_size_factor': 1.5,               # radius of ring is gSiz*ring_size_factor\n",
+    "            'ring_size_factor': ring_size_fact,    # radius of ring is gSiz*ring_size_factor\n",
     "            'del_duplicates': True,                # whether to remove duplicates from initialization\n",
     "            'border_pix': 5,                       # number of pixels to not consider in the borders\n",
     "            'min_SNR': 3,                          # adaptive way to set threshold on the transient size\n",
@@ -394,14 +421,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|                                                                                                                            | 0/1 [00:00<?, ?it/s]In setting CNMFParams, non-pathed parameters were used; this is deprecated. In some future version of Caiman, allow_legacy will default to False (and eventually will be removed)\n"
+      "  0%|                                                                                                                           | 0/15 [00:00<?, ?it/s]In setting CNMFParams, non-pathed parameters were used; this is deprecated. In some future version of Caiman, allow_legacy will default to False (and eventually will be removed)\n"
      ]
     },
     {
@@ -409,7 +436,7 @@
      "output_type": "stream",
      "text": [
       "[]\n",
-      "/export/home1/RawCalciumData/downsampled_movie_gsig3_mincorr0.9_minpnr8_estimates.pickle\n"
+      "/export/home1/RawCalciumData/sleeppre/Substack_cropped-01_gsig4.760000000000001_mincorr0.7_minpnr36_estimates.pickle\n"
      ]
     },
     {
@@ -429,7 +456,21 @@
       "Yr.T.reshape ended...\n",
       "Performing CNMF...\n",
       "source_extraction.cnmf\n",
-      "cnm.fit\n",
+      "cnm.fit\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Component 21 is almost empty. Space correlation is set to 0.\n",
+      "NaN values detected for space correlation in [65]. Changing their value to -1.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "cnm.estimates.evaluate_components\n",
       "Computing imax...\n"
      ]
@@ -438,7 +479,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [03:58<00:00, 238.89s/it]"
+      "  7%|███████▌                                                                                                          | 1/15 [02:58<41:44, 178.88s/it]In setting CNMFParams, non-pathed parameters were used; this is deprecated. In some future version of Caiman, allow_legacy will default to False (and eventually will be removed)\n"
      ]
     },
     {
@@ -446,15 +487,29 @@
      "output_type": "stream",
      "text": [
       "Saving result...\n",
-      "downsampled_movie.tif cnmf-ed in 238.8s\n",
-      "CleanMemmaps attempts: 0\n"
+      "Substack_cropped-01.tif cnmf-ed in 178.9s\n",
+      "CleanMemmaps attempts: 0\n",
+      "[]\n",
+      "/export/home1/RawCalciumData/sleeppre/Substack_cropped-02_gsig4.760000000000001_mincorr0.7_minpnr36_estimates.pickle\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "The local backend is an alias for the multiprocessing backend, and the alias may be removed in some future version of Caiman\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading tif to memory...\n",
+      "cm.save_memmap ended...\n",
+      "cm.load_memmap ended...\n",
+      "Yr.T.reshape ended...\n",
+      "Performing CNMF...\n",
+      "source_extraction.cnmf\n"
      ]
     }
    ],
